--- a/index.html
+++ b/index.html
@@ -13,118 +13,123 @@
         <div class="title">SCORE</div>
         <div class="border">
           <div class="row1">
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
+            <button
+              type="button"
+              id="size"
+              class="red"
+              onclick="this.style.visibility = 'hidden';"
+            ></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
           </div>
           <div class="row2">
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
-            <button type="button" id="size" class="red"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="red" onclick="this.style.visibility = 'hidden';"></button>
           </div>
           <div class="row3">
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="smaller1" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="smaller1" class="yellow">
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
             <button type="button" id="smaller2" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
           </div>
           <div class="row4">
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
-            <button type="button" id="size" class="yellow"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="yellow" onclick="this.style.visibility = 'hidden';"></button>
           </div>
           <div class="row5">
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
           </div>
           <div class="row6">
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
-            <button type="button" id="size" class="green"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="green" onclick="this.style.visibility = 'hidden';"></button>
           </div>
           <div class="row7">
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
           </div>
           <div class="row8">
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
-            <button type="button" id="size" class="blue"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
+            <button type="button" id="size" class="blue" onclick="this.style.visibility = 'hidden';"></button>
           </div>
         </div>
       </div>
